Horizontal form with nicer submit button.

--- a/imports/stylus/app.styl
+++ b/imports/stylus/app.styl
@@ -21,7 +21,49 @@ form div
 .form-group:nth-of-type(3)
   width: 10%
 
+.form-group:nth-of-type(4)
+  text-align: center
+  width: 15%
 
+button
+  float right
+  color transparent
+
+button:hover,
+button:active {
+  outline: 0;
+}
+
+/* 3D Button */
+button.btn-primary {
+  background: transparent;
+  border: none;
+  border-radius: 80px;
+  color black
+  cursor: pointer;
+  font: bold 100px/225px sans-serif;
+  height: 70px;
+  padding: 0;
+  text-shadow: 0 1px 1px hsla(0,0%,100%,.25),
+    0 -1px 1px hsla(0,0%,0%,.75);
+  width: 70px;
+  top:-80px;
+  position: absolute;
+
+}
+
+button.btn-primary:hover,
+button.btn-primary:focus {
+  //TODO Find a better green
+  color: green;
+  background: transparent;
+  text-shadow: 0 0 20px hsla(240,75%,75%,.5),
+    0 1px 1px hsla(0,0%,100%,.25),
+    0 -1px 1px hsla(0,0%,0%,.75);
+}
+button.btn-primary:active {
+  line-height: 86px;
+}
 
 .page-wrap
   text-align left
